[package]
name = "blog_os"
version = "0.1.0"
authors = ["liuyanan <oceanwavechina@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# Disabling Unwinding below
[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"